// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sliderField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  min-width: 2.5rem;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-10:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-10[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-10[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-10::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-10::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-10::-moz-range-thumb:hover,
.emotion-10::-moz-range-thumb:active,
.emotion-10::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-10::-moz-range-thumb:active,
.emotion-10::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-10::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-10::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-10::-webkit-slider-thumb:hover,
.emotion-10::-webkit-slider-thumb:active,
.emotion-10::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-10::-webkit-slider-thumb:active,
.emotion-10::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
        data-options="false"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-3"
          >
            <span
              class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              0
            </span>
          </div>
          <div
            class="emotion-8 emotion-3"
          >
            <input
              aria-label="test"
              class="emotion-10 emotion-11"
              data-direction="column"
              data-error="false"
              id="«r0»"
              max="100"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  min-width: 2.5rem;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-10[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-10[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-10[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-10::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-10::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: not-allowed;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-10::-moz-range-thumb:hover,
.emotion-10::-moz-range-thumb:active,
.emotion-10::-moz-range-thumb:focus {
  border: null;
}

.emotion-10::-moz-range-thumb:active,
.emotion-10::-moz-range-thumb:focus {
  box-shadow: null;
  cursor: not-allowed;
}

.emotion-10::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-10::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: not-allowed;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-10::-webkit-slider-thumb:hover,
.emotion-10::-webkit-slider-thumb:active,
.emotion-10::-webkit-slider-thumb:focus {
  border: null;
}

.emotion-10::-webkit-slider-thumb:active,
.emotion-10::-webkit-slider-thumb:focus {
  box-shadow: null;
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="Slider Input"
        class="emotion-0 emotion-1"
        data-options="false"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-3"
          >
            <span
              class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              0
            </span>
          </div>
          <div
            class="emotion-8 emotion-3"
          >
            <input
              aria-disabled="true"
              aria-label="Slider Input"
              class="emotion-10 emotion-11"
              data-direction="column"
              data-error="false"
              disabled=""
              id="«rq»"
              max="100"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  min-width: 2.5rem;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-10:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-10[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-10[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-10::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-10::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-10::-moz-range-thumb:hover,
.emotion-10::-moz-range-thumb:active,
.emotion-10::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-10::-moz-range-thumb:active,
.emotion-10::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-10::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-10::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-10::-webkit-slider-thumb:hover,
.emotion-10::-webkit-slider-thumb:active,
.emotion-10::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-10::-webkit-slider-thumb:active,
.emotion-10::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-12 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 1rem;
}

.emotion-12[data-double='true'] {
  margin-top: 2.5rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 0%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-14[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-14[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 16.666666666666668%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-16[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-16[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 33.333333333333336%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-18[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-18[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 50%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-20[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-20[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 66.66666666666667%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-22[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-22[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 83.33333333333333%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-24[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-24[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 100%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-26[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-26[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
        data-options="true"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-3"
          >
            <span
              class="emotion-6 emotion-7 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              1
            </span>
          </div>
          <div
            class="emotion-8 emotion-3"
          >
            <input
              aria-label="test"
              class="emotion-10 emotion-11"
              data-direction="column"
              data-error="false"
              id="«r3»"
              max="6"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
            <datalist
              class="emotion-12 emotion-13"
              data-double="false"
            >
              <span
                class="emotion-14 emotion-15"
                data-element-left="true"
                data-element-right="false"
                data-value="0"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  1Mb
                </p>
              </span>
              <span
                class="emotion-16 emotion-15"
                data-element-left="false"
                data-element-right="false"
                data-value="1"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  3Mb
                </p>
              </span>
              <span
                class="emotion-18 emotion-15"
                data-element-left="false"
                data-element-right="false"
                data-value="2"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  5Mb
                </p>
              </span>
              <span
                class="emotion-20 emotion-15"
                data-element-left="false"
                data-element-right="false"
                data-value="3"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  10Mb
                </p>
              </span>
              <span
                class="emotion-22 emotion-15"
                data-element-left="false"
                data-element-right="false"
                data-value="4"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  50Mb
                </p>
              </span>
              <span
                class="emotion-24 emotion-15"
                data-element-left="false"
                data-element-right="false"
                data-value="5"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  100Mb
                </p>
              </span>
              <span
                class="emotion-26 emotion-15"
                data-element-left="false"
                data-element-right="true"
                data-value="6"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  500Mb
                </p>
              </span>
            </datalist>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values and double 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-8 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 0.5rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-14 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 0.5rem;
  width: 100%;
  min-width: 13.75rem;
  border-radius: 0.25rem;
  background: #e9eaeb;
}

.emotion-16 {
  position: absolute;
  height: 100%;
  background-color: #8c40ef;
  border-radius: 0.25rem;
}

.emotion-16[data-error='true'] {
  background-color: #e51963;
}

.emotion-16[aria-disabled='true'] {
  background-color: #d8c5fc;
}

.emotion-18 {
  position: absolute;
  width: 100%;
  pointer-events: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  background: transparent;
  outline: none;
}

.emotion-18:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-18::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-18::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -8px;
}

.emotion-18::-moz-range-thumb:hover,
.emotion-18::-moz-range-thumb:active,
.emotion-18::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-18::-moz-range-thumb:active,
.emotion-18::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-18::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-18:focus::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-18::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -8px;
}

.emotion-18::-webkit-slider-thumb:hover,
.emotion-18::-webkit-slider-thumb:active,
.emotion-18::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-18::-webkit-slider-thumb:active,
.emotion-18::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-20 {
  position: absolute;
  width: 100%;
  pointer-events: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  background: transparent;
  outline: none;
}

.emotion-20:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-20::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(100% - 8px);
  top: -8px;
}

.emotion-20::-moz-range-thumb:hover,
.emotion-20::-moz-range-thumb:active,
.emotion-20::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-20::-moz-range-thumb:active,
.emotion-20::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-20::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-20:focus::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-20::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(100% - 8px);
  top: -8px;
}

.emotion-20::-webkit-slider-thumb:hover,
.emotion-20::-webkit-slider-thumb:active,
.emotion-20::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-20::-webkit-slider-thumb:active,
.emotion-20::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-22 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 1rem;
}

.emotion-22[data-double='true'] {
  margin-top: 2.5rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 0%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-24[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-24[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 16.666666666666668%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-26[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-26[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 33.333333333333336%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-28[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-28[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 50%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-30[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-30[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 66.66666666666667%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-32[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-32[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 83.33333333333333%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-34[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-34[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 100%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-36[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-36[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
        data-double="true"
        data-options="true"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-3"
          >
            <div
              class="emotion-6 emotion-3"
            >
              <span
                class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                data-testid="value-left"
                style="--uv_qabug40: right;"
              >
                1
              </span>
              <span
                class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                data-testid="value-right"
                style="--uv_qabug40: right;"
              >
                500
              </span>
            </div>
            <div
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <div
                  aria-disabled="false"
                  class="emotion-16 emotion-17"
                  data-error="false"
                  style="left: 0%; right: 0%;"
                />
              </div>
              <input
                aria-label="test"
                class="emotion-18 emotion-19"
                data-direction="column"
                data-testid="handle-left"
                id="«rd»"
                max="6"
                min="0"
                name="test"
                step="1"
                type="range"
                value="0"
              />
              <input
                aria-label="test"
                class="emotion-20 emotion-19"
                data-direction="column"
                data-testid="handle-right"
                id="«rd»"
                max="6"
                min="0"
                name="test"
                step="1"
                type="range"
                value="6"
              />
              <datalist
                class="emotion-22 emotion-23"
                data-double="true"
              >
                <span
                  class="emotion-24 emotion-25"
                  data-element-left="true"
                  data-element-right="false"
                  data-value="0"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9ow9 uv_m4c9owi uv_m4c9oww uv_m4c9ow1b uv_m4c9ow1c uv_m4c9ow3c"
                  >
                    1Mb
                  </p>
                </span>
                <span
                  class="emotion-26 emotion-25"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="1"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    3Mb
                  </p>
                </span>
                <span
                  class="emotion-28 emotion-25"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="2"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    5Mb
                  </p>
                </span>
                <span
                  class="emotion-30 emotion-25"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="3"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    10Mb
                  </p>
                </span>
                <span
                  class="emotion-32 emotion-25"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="4"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    50Mb
                  </p>
                </span>
                <span
                  class="emotion-34 emotion-25"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="5"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    100Mb
                  </p>
                </span>
                <span
                  class="emotion-36 emotion-25"
                  data-element-left="false"
                  data-element-right="true"
                  data-value="6"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9ow9 uv_m4c9owi uv_m4c9oww uv_m4c9ow1b uv_m4c9ow1c uv_m4c9ow3c"
                  >
                    500Mb
                  </p>
                </span>
              </datalist>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: pointer;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
  min-width: 2.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-13:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-13[data-success='true'] {
  border-color: #22674e;
}

.emotion-13[data-error='true'] {
  border-color: #b3144d;
}

.emotion-13:hover {
  border-color: #792dd4;
}

.emotion-13[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.emotion-13[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-13[data-controls='false']>.emotion-15 {
  border-width: 0;
}

.emotion-13[data-size='small'] {
  height: 2rem;
}

.emotion-13[data-size='medium'] {
  height: 2.5rem;
}

.emotion-13[data-size='large'] {
  height: 3rem;
}

.emotion-16 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.emotion-18 {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: Regular;
  line-height: 1.25rem;
  text-align: center;
  padding: 0.5rem;
  background: none;
}

.emotion-18[data-has-unit='true'] {
  text-align: left;
  padding: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-18::-webkit-outer-spin-button,
.emotion-18::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-18 {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  -ms-appearance: textfield;
  appearance: textfield;
}

.emotion-18[data-size='small'] {
  height: 2rem;
}

.emotion-18[data-size='medium'] {
  height: 2.5rem;
}

.emotion-18[data-size='large'] {
  height: 3rem;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: Regular;
  line-height: 1.5rem;
}

.emotion-18:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
  border-block: 1px solid #d9dadd;
}

.emotion-18:read-only {
  color: #3f4250;
  background: #f9f9fa;
  border-block: 1px solid #d9dadd;
}

.emotion-18:-moz-read-only~.exvap482 {
  background: #f9f9fa;
}

.emotion-18:read-only~.exvap482 {
  background: #f9f9fa;
}

.emotion-18:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
  border-block: 1px solid #e9eaeb;
}

.emotion-18:disabled~.exvap482 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-18:placeholder-shown~.exvap482 {
  color: #727683;
  font-size: 1rem;
}

.emotion-18[data-controls='false'] {
  text-align: left;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-24 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-24:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-24:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-24[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-24[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-24[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-24::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-24::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-24::-moz-range-thumb:hover,
.emotion-24::-moz-range-thumb:active,
.emotion-24::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-24::-moz-range-thumb:active,
.emotion-24::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-24::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-24::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-24::-webkit-slider-thumb:hover,
.emotion-24::-webkit-slider-thumb:active,
.emotion-24::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-24::-webkit-slider-thumb:active,
.emotion-24::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
        data-options="false"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-3"
          >
            <div
              class="emotion-6 emotion-3"
            >
              <label
                class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                for="«rt»"
              >
                Test
              </label>
              <span
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
              >
                *
              </span>
            </div>
            <div
              class="emotion-10 emotion-11 emotion-3"
            >
              <div>
                <div
                  class="emotion-13 emotion-14"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-size="small"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="emotion-15 emotion-16 emotion-17"
                  >
                    <input
                      aria-label="input"
                      class="emotion-18 emotion-19"
                      data-controls="false"
                      data-has-unit="false"
                      data-size="small"
                      data-testid="slider-input"
                      id="«r10»"
                      max="10"
                      min="0"
                      placeholder=""
                      step="1"
                      type="number"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-20 emotion-3"
          />
          <div
            class="emotion-22 emotion-3"
          >
            <input
              aria-label="test"
              class="emotion-24 emotion-25"
              data-direction="column"
              data-error="false"
              id="«rt»"
              max="10"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
